add-html-css-files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- start section navbar -->
         <section class="navbar">
-            <div class="title">
+            <div class="title_navbar">
                 <p>START BOOTSTRAP</p>
             </div>
             <div class="list">
@@ -20,11 +20,106 @@
         <!-- End section navbar -->
         <!-- start Hero section -->
         <section class="hero">
-            <div>
+            <div class="Hero_img">
                 <img src="./images/avataaars.svg">
+            </div>
+            <div class="whit_title">
+                <p>START BOOTSTRAP</p>
+            </div>
+            <div class="star-shape">
+                <div class="line"></div>
+                <div class="star-icon"><img src="./images/star.png"></div>
+                <div class="line"></div>
+            </div>
+            <div class="hero_subtitle">
+                <p>Graphic Artist - Web Designer - Illustrator</p>
             </div>
         </section>
         <!-- End Hero section -->
+        <!-- start portfolio section -->
+        <section>
+            <div class="title">
+                <p>PORTFOLIO</p>
+            </div>
+            <div class="star-shape">
+                <div class="line-portfolio"></div>
+                <div class="star-icon"><img src="./images/star2.png"></div>
+                <div class="line-portfolio"></div>
+            </div>
+            <div class="portfolio-img">
+                <img src="./images/1.png">
+                <img src="./images/2.png">
+                <img src="./images/3.png">
+            </div>
+            <div class="portfolio-img">
+                <img src="./images/4.png">
+                <img src="./images/5.png">
+                <img src="./images/6.png">
+            </div>
+        </section>
+        <!-- End portfolio section -->
+        <!-- start about section -->
+        <section class="about">
+            <div class="whit_title">
+                <p>ABOUT</p>
+            </div>
+            <div class="star-shape">
+                <div class="line"></div>
+                <div class="star-icon"><img src="./images/star.png"></div>
+                <div class="line"></div>
+            </div>
+            <div class="about-info">
+                <div class="about-paragraph">
+                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                </div>
+                <div class="about-paragraph">
+                    <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                </div>
+            </div>
+            <div class="about-btn">
+                <button class="btn">Free Download!</button>
+            </div>
+        </section>
+        <!-- End about section -->
+        <!-- start contact section -->
+        <section class="contact">
+            <div class="title">
+                <p>CONTACT ME</p>
+            </div>
+            <div class="star-shape">
+                <div class="line-portfolio"></div>
+                <div class="star-icon"><img src="./images/star2.png"></div>
+                <div class="line-portfolio"></div>
+            </div>
+            <div class="input">
+                <input class="contact-input" placeholder="Full Name">
+                <input class="contact-input" placeholder="Email Address">
+                <input class="contact-input" placeholder="Phone number">
+                <input class="contact-msg" placeholder="Message">
+                <div>
+                <button class="btn btn-green">Send</button>
+                </div>
+            </div>
+        </section>
+        <!-- End contact section -->
+        <!-- start final section -->
+            <section class="final">
+                <div class="final-info">
+                    <h2>LOCATION</h2>
+                    <p>2215 John Daniel Drive
+                        Clark, MO 65243</p>
+                </div>
+                <div class="final-info">
+                    <h2>AROUND THE WEB</h2>
+                    <p>2215 John Daniel Drive
+                        Clark, MO 65243</p>
+                </div>
+                <div class="final-info">
+                    <h2>ABOUT FREELANCER </h2>
+                    <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
+                </div>
+            </section>
+        <!-- End final section -->
 
     </body>
 </html>
