--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Bootstrap</title>
 		<link href="./css/style.css" type="text/css" rel="stylesheet" />
-		<script src="game.js" type="text/javascript"></script>
+		<script src="./javascript/script.js" type="text/javascript"></script>
 	</head>
     <body>
         <!-- start section navbar -->
@@ -11,10 +11,10 @@
             <div class="title_navbar">
                 <p>START BOOTSTRAP</p>
             </div>
-            <div class="list">
-                <p>PORTFOLIO</p>
-                <p>ABOUT</p>
-                <p>CONTACT</p>
+            <div class="list" id="index">
+                <p class="color">PORTFOLIO</p>
+                <p class="color">ABOUT</p>
+                <p class="color">CONTACT</p>
             </div>
         </section>
         <!-- End section navbar -->
@@ -86,18 +86,21 @@
             <div class="title">
                 <p>CONTACT ME</p>
             </div>
+            <div class="fail" id="fail">
+
+            </div>
             <div class="star-shape">
                 <div class="line-portfolio"></div>
                 <div class="star-icon"><img src="./images/star2.png"></div>
                 <div class="line-portfolio"></div>
             </div>
             <div class="input">
-                <input class="contact-input" placeholder="Full Name">
-                <input class="contact-input" placeholder="Email Address">
-                <input class="contact-input" placeholder="Phone number">
-                <input class="contact-msg" placeholder="Message">
+                <input type="text" class="contact-input" placeholder="Full Name" value="" id="full-name">
+                <input type="email" class="contact-input" placeholder="Email Address" id="email">
+                <input class="contact-input" placeholder="Phone number" id="phone">
+                <input class="contact-msg" placeholder="Message" id="msg">
                 <div>
-                <button class="btn btn-green">Send</button>
+                <button class="btn btn-green" id="btn">Send</button>
                 </div>
             </div>
         </section>
