--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Bootstrap</title>
 		<link href="./css/style.css" type="text/css" rel="stylesheet" />
 		<script src="./javascript/script.js" type="text/javascript"></script>
+        <script src="./javascript/scriptmessages.js" type="text/javascript"></script>
 	</head>
     <body>
         <!-- start section navbar -->
@@ -101,6 +102,7 @@
                 <input class="contact-msg" placeholder="Message" id="msg">
                 <div>
                 <button class="btn btn-green" id="btn">Send</button>
+                <a href="file:///C:/Users/Qitabi/Desktop/bootstrap-site-frontend/index1.html"><button class="btn btn-green" id="msg-btn">show Messages</button></a> 
                 </div>
             </div>
         </section>
