--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
+<!-- New page to show the masseges -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,6 +10,5 @@
         <div class="navbar-msg">
                 <p>messages</p>
         </div>
-
     </body>
 </html>
